# agent-zero

./: .actrc  .ai-review.yml  .coverage  .coveragerc  .dockerignore  .driftignore  .env.example  .env.example.cloud  .flake8  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  =28.0.0  AGENT-JUMBO-CLONE.md  AGENT-JUMBO-EXECUTION.md  AGENT-JUMBO-INTEGRATION.md  AGENT-JUMBO-OPA.md  AGENTS.md  AGENT_ZERO_KB_TRAINING_STATUS.md  ANALYSIS_FINDINGS_AND_RECOMMENDATIONS.md  ANTIGRAVITY_SETUP_GUIDE.md  AUTH_QUICKSTART.md  CHANGELOG.md  CHANGELOG_HOT_RELOAD.md  CHANGELOG_PHASE5.md  CI_SETUP_SUMMARY.md  CLAUDE.md  CLOUD_BROWSER_README.md  COMPARISON_DEVOPS_VS_MOLTBOT_OPENSOURCING.md  COMPETITIVE-ANALYSIS.md  COMPLETE_IMPLEMENTATION_INVENTORY.md  COMPLETE_VS_COMPLETE_COMPARISON.md  CONTINUE_DEVELOPMENT.md  CONTRIBUTING.md  CUSTOMIZATIONS.md  DEEP_DIVE_COMPLETE_ANALYSIS_INDEX.md  DEPLOYMENT_DECISION_SUMMARY.md  DEPLOYMENT_READINESS_BRIEF.md  (+168 more)
.8x/: config.json
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.drift/: config.json  manifest.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.kdev4/: agent-zero.kdev4
.mcp-debug-tools/: config.json
.serena/: project.yml
AI-Memory/: memory.db
_archive_2025_11_24/: 2025-11-23.md  COMPREHENSIVE_PLAN_DELIVERY.md  MLCREATOR_KB_ARCHITECTURE_VISUAL.md  MLCREATOR_MASTER_KB_OPTIMIZATION_PLAN.md  OLLAMA_SETUP.md  activate_foam_integration.bat  continuous_learning_config.json  diagnose_ollama.bat  diagnostic_report_20251123_164956.json  final_diagnostic_report.md  final_fix.sh  fix_gemini_issue.sh  fix_models_py.sh  inspect_memories.py  integrated_knowledge_system.py  launch_antigravity.bat  mlcreator_kb_orchestrator.py  mlcreator_setup_report.json  optimize_knowledge_workflow.py  quick_test_suite.py  reset_all_memories.sh  restart_agent_zero.bat  schedule_foam_tasks.ps1  setup_mlcreator_complete.bat  setup_mlcreator_project.md  setup_ollama_models.bat  setup_python_env.bat  setup_unity_mlcreator_docker.sh  start_ollama.bat  test_agent_zero_suite.py  test_memory_efficiency.py  test_memory_simple.py  test_ollama.py  verify_models.py  verify_output_final.txt  verify_output_final_2.txt  working_solution.sh
a0-cli/: pyproject.toml
a0-cli/config/: default.toml
a0-cli/docs/plans/: 2025-02-06-cli-launcher-design.md  2025-02-06-cli-launcher-plan.md
a0-cli/src/a0/: __init__.py  __main__.py  banner.py  cli.py
a0-cli/src/a0/acp/: __init__.py  server.py
a0-cli/src/a0/client/: __init__.py  api.py  poller.py
a0-cli/src/a0/launcher/: __init__.py  actions.py  menu.py
a0-cli/src/a0/tui/: app.py
a0-cli/src/a0/tui/screens/: main.py
a0-cli/src/a0/utils/: __init__.py  config.py  docker.py
a0-cli/tests/: test_acp.py  test_client.py
agents/: agent.py  onboarding.md
alembic/: README  env.py
anymaker/: seed.py  (+4 more)
(+3590 files in other folders)
